--- a/orbit-realm/Dockerfile.nginx
+++ b/orbit-realm/Dockerfile.nginx
@@ -1,14 +1,18 @@
 # Dockerfile para servir la aplicación con nginx
 FROM nginx:alpine
 
+RUN apk add --no-cache openssl bash
+
 # Copiar los archivos construidos de la aplicación
 COPY dist/spa/ /usr/share/nginx/html/
 
 # Copiar la configuración personalizada de nginx
 COPY nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY nginx/start.sh /start.sh
+RUN chmod +x /start.sh
 
-# Exponer el puerto 80
-EXPOSE 80
+# Exponer puertos 80 y 443
+EXPOSE 80 443
 
 # Comando por defecto (nginx ya está configurado para iniciarse automáticamente)
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/start.sh"]
