--- a/orbit-realm/nginx/conf.d/default.conf
+++ b/orbit-realm/nginx/conf.d/default.conf
@@ -1,63 +1,110 @@
+#############################
+# HTTP -> HTTPS + ACME CHALLENGE
+#############################
 server {
     listen 80;
-    server_name localhost;
-    
-    # Directorio raíz donde están los archivos estáticos de tu aplicación
+    listen [::]:80;
+    server_name tecnologik.net www.tecnologik.net;
+
+    # Ruta para los desafíos ACME (Certbot montará aquí)
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri =404;
+    }
+
+    # Redirección global a HTTPS (excepto ACME)
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+#############################
+# SERVIDOR HTTPS PRINCIPAL
+#############################
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
+    server_name tecnologik.net www.tecnologik.net;
+
+    # Certificados (montados vía volumen desde Let's Encrypt)
+    ssl_certificate /etc/letsencrypt/live/tecnologik.net/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tecnologik.net/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/tecnologik.net/chain.pem;
+
+    # SSL config básica segura
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers 'TLS_AES_256_GCM_SHA384:TLS_AES_128_GCM_SHA256:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+    ssl_prefer_server_ciphers off;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+
+    # OCSP Stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 valid=300s;
+    resolver_timeout 5s;
+
+    # Directorio raíz donde están los archivos estáticos
     root /usr/share/nginx/html;
     index index.html index.htm;
-    
-    # Configuración para servir archivos estáticos
+
+    # Archivos estáticos / SPA
     location / {
         try_files $uri $uri/ /index.html;
-        
-        # Headers para mejorar el caching
         add_header Cache-Control "public, max-age=31536000" always;
-        
-        # Configuración específica para el index.html (no cachear)
         location = /index.html {
             add_header Cache-Control "no-store, no-cache, must-revalidate" always;
             expires -1;
         }
     }
-    
-    # Configuración específica para assets (CSS, JS, imágenes)
+
+    # Proxy a Odoo bajo /odoo
+    location /odoo/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Upgrade $http_upgrade;
+    # Fuerza upgrade para websockets; conexiones normales lo ignoran
+    proxy_set_header Connection "upgrade";
+        proxy_http_version 1.1;
+        proxy_read_timeout 720s;
+        proxy_pass http://odoo:8069/;
+        proxy_redirect off;
+    }
+
     location /assets/ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         gzip_static on;
     }
-    
-    # Configuración para archivos estáticos comunes
+
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
         gzip_static on;
     }
-    
-    # Configuración de gzip
+
+    # Gzip
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/json
-        application/javascript
-        application/xml+rss
-        application/atom+xml
-        image/svg+xml;
-    
-    # Headers de seguridad
+    gzip_types text/plain text/css text/xml text/javascript application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
+
+    # Seguridad
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    
-    # Manejo de errores
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+
+    # Errores SPA
     error_page 404 /index.html;
 }
 
