--- a/orbit-realm/nginx/conf.d/default.conf
+++ b/orbit-realm/nginx/conf.d/default.conf
@@ -21,6 +21,9 @@ server {
 #############################
 # SERVIDOR HTTPS PRINCIPAL
 #############################
+upstream odoo_upstream {
+    server odoo:8069 fail_timeout=0;
+}
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -73,7 +76,7 @@ server {
     proxy_set_header Connection "upgrade";
         proxy_http_version 1.1;
         proxy_read_timeout 720s;
-        proxy_pass http://odoo:8069/;
+        proxy_pass http://odoo_upstream/;
         proxy_redirect off;
     }
 
