--- a/orbit-realm/nginx/conf.d/default.conf
+++ b/orbit-realm/nginx/conf.d/default.conf
@@ -54,18 +54,8 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Archivos estáticos / SPA
-    location / {
-        try_files $uri $uri/ /index.html;
-        add_header Cache-Control "public, max-age=31536000" always;
-        location = /index.html {
-            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
-            expires -1;
-        }
-    }
-
-    # Proxy a Odoo bajo /odoo
-    location /odoo/ {
+    # Proxy Odoo (subruta /odoo) - colocar ANTES del bloque SPA
+    location ^~ /odoo/ {
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -79,6 +69,26 @@ server {
         proxy_pass http://odoo_upstream/;
         proxy_redirect off;
     }
+    # Rutas core de Odoo expuestas como absolutas (/web, /longpolling, /bus, etc.)
+    location ^~ /web/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection "upgrade"; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/web/; proxy_redirect off; }
+    location ^~ /longpolling/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection "upgrade"; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/longpolling/; proxy_redirect off; }
+    location ^~ /bus/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_set_header Upgrade $http_upgrade; proxy_set_header Connection "upgrade"; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/bus/; proxy_redirect off; }
+    location ^~ /mail/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/mail/; proxy_redirect off; }
+    location ^~ /im_livechat/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/im_livechat/; proxy_redirect off; }
+    location ^~ /spreadsheets/ { proxy_set_header Host $host; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; proxy_set_header X-Forwarded-Host $host; proxy_set_header X-Forwarded-Port $server_port; proxy_http_version 1.1; proxy_read_timeout 720s; proxy_pass http://odoo_upstream/spreadsheets/; proxy_redirect off; }
+
+    # Archivos estáticos / SPA (ubicado al final para no eclipsar rutas Odoo)
+    location / {
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "public, max-age=31536000" always;
+        location = /index.html {
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+            expires -1;
+        }
+    }
+
+    # Subida de archivos grandes para Odoo
+    client_max_body_size 64m;
 
     location /assets/ {
         expires 1y;
