--- a/orbit-realm/nginx/conf.d/default.conf
+++ b/orbit-realm/nginx/conf.d/default.conf
@@ -31,9 +31,10 @@ server {
     server_name tecnologik.net www.tecnologik.net;
 
     # Certificados (montados vía volumen desde Let's Encrypt)
-    ssl_certificate /etc/letsencrypt/live/tecnologik.net/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/tecnologik.net/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/tecnologik.net/chain.pem;
+    # Usando certificado emitido (directorio -0001) porque el nombre base tenía dummy
+    ssl_certificate /etc/letsencrypt/live/tecnologik.net-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/tecnologik.net-0001/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/tecnologik.net-0001/chain.pem;
 
     # SSL config básica segura
     ssl_session_timeout 1d;
