--- a/orbit-realm/odoo/config/odoo.conf
+++ b/orbit-realm/odoo/config/odoo.conf
@@ -5,4 +5,7 @@ db_user = odoo
 db_password = odoo_password
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 log_level = info
-proxy_mode = True
+# proxy_mode desactivado para permitir acceso directo a 8069 sin encabezados de proxy.
+proxy_mode = False
+# (Opcional) Limitar bases visibles: descomenta y ajusta si deseas filtrar
+# dbfilter = ^orbit_realm$
