--- a/orbit-realm/odoo/config/odoo.conf
+++ b/orbit-realm/odoo/config/odoo.conf
@@ -7,5 +7,7 @@ addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
 log_level = info
 # proxy_mode desactivado para permitir acceso directo a 8069 sin encabezados de proxy.
 proxy_mode = False
-# (Opcional) Limitar bases visibles: descomenta y ajusta si deseas filtrar
-# dbfilter = ^orbit_realm$
+# Limitar bases visibles a una (ajusta si tu DB se llama distinto)
+dbfilter = ^orbit_realm$
+# Opcional: fija admin_passwd (cambia ESTA CADENA en producción)
+admin_passwd = changeme_admin_master_password
