--- a/orbit-realm/odoo/config/odoo.conf
+++ b/orbit-realm/odoo/config/odoo.conf
@@ -8,6 +8,8 @@ log_level = info
 # proxy_mode desactivado para permitir acceso directo a 8069 sin encabezados de proxy.
 proxy_mode = False
 # Limitar bases visibles a una (ajusta si tu DB se llama distinto)
-dbfilter = ^orbit_realm$
+# dbfilter desactivado temporalmente para permitir que Odoo detecte todas las bases existentes
+# (evita KeyError mientras confirmamos el nombre real de la BD).
+# dbfilter = ^orbit_realm$
 # Opcional: fija admin_passwd (cambia ESTA CADENA en producción)
 admin_passwd = changeme_admin_master_password
